src/styles/base/_base.scss
*{
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
  overflow-y: scroll;
}

body {
  color: $dark-grey;
  font-family: Helvetica, Arial, sans-serif;
  font-size: $m-size;
  line-height: 1.6;
}

button {
  cursor: pointer;
}

button:disabled {
  cursor: default;
}

.is-active {
  font-weight: bold;
}


.loader{
background: #f7f7f7;
padding-left: 400px;            

}

